--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,7 @@
       <ul>
         <li><a href="index.html" class="aktuell">Home</a></li>
         <li><a href="infos.html">Infos</a></li>
+        <li><a href="aboutUs.html">Über uns</a></li>
       </ul>
     </nav>
     <h1>HTML und CSS</h1>
