--- a/demo/infos.html
+++ b/demo/infos.html
@@ -13,6 +13,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="infos.html" class="aktuell">Infos</a></li>
+        <li><a href="aboutUs.html">Über uns</a></li>
       </ul>
     </nav>
     <h1>HTML und CSS - nützliche Links</h1>
